HFP-270 Added correct spacing for info on IV.

--- a/styles/interactive-video-editor.css
+++ b/styles/interactive-video-editor.css
@@ -46,6 +46,10 @@
   background: none;
 }
 
+.h5p-interactive-video-dragnbar .h5p-dragnbar-li:hover:before {
+  top: 49px;
+}
+
 .h5p-interactive-video-dragnbar .h5p-dragnbar-a {
   width: 1em;
   height: 1.1em;
